# octagent

./: .env.example  .gitignore  README.md  api.env  main.py  package.json  pyproject.toml  requirements.txt
core/: consensus.py  index.html  orchestrator.py
personas/: accountant.yaml  archivist.yaml  bouncer.yaml  builder.yaml  critic.yaml  diplomat.yaml  dreamer.yaml  scout.yaml
public/: app.js  index.html  styles.css
server/: index.js
server/board/: aiClient.js  audit.js  boardEngine.js  personalities.json  prompts.js  selfModify.js
server/routes/: api.js
templates/: login.html
tools/: action_bus.py
web/: index.html
