[project]
name = "octagent"
version = "0.1.0"
description = "Eight Arms. One Mind. Zero Sleep. An asynchronous Multi-Agent System."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "litellm>=1.0.0",
    "tenacity>=8.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]